Colaboratory를 통해 생성됨

--- a/Numpy의_기본_사용법.ipynb
+++ b/Numpy의_기본_사용법.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Numpy의 기본 사용법.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOUVLy5sgUwcf5HuGk7SK+1",
+      "authorship_tag": "ABX9TyOX7q+eHzHcxNCpmIUqYD0x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,6 +122,198 @@
             "  del sys.path[0]\n"
           ],
           "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DVs67QpfalS9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "987c6e68-6bb4-4198-ce68-1cc5af2b0490"
+      },
+      "source": [
+        "# 배열 붙이기 (가로)\n",
+        "array1 = np.array([1,2,3])\n",
+        "array2 = np.array([4,5])\n",
+        "array3 = np.concatenate([array1,array2])\n",
+        "print(array3)"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1 2 3 4 5]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xj-97UVtr0rG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "cb8e0266-e0c4-4407-b371-18a2b9bf065f"
+      },
+      "source": [
+        "# 행렬 구조 변경 reshape\n",
+        "array1 = np.array([1,2,3,4])\n",
+        "print(array1)\n",
+        "print(array1.reshape(2,2))"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1 2 3 4]\n",
+            "[[1 2]\n",
+            " [3 4]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WZuw97yksVRK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 251
+        },
+        "outputId": "a6681244-db54-469d-9139-93ff07fa692f"
+      },
+      "source": [
+        "# 배열 붙이기 (세로)\n",
+        " array1 = np.arange(4)\n",
+        " print(array1)\n",
+        " array1 = array1.reshape(2,2)\n",
+        " print(array1)\n",
+        " array2 = np.arange(8).reshape(4,2)\n",
+        " print(array2)\n",
+        " print(np.concatenate([array1,array2]))"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0 1 2 3]\n",
+            "[[0 1]\n",
+            " [2 3]]\n",
+            "[[0 1]\n",
+            " [2 3]\n",
+            " [4 5]\n",
+            " [6 7]]\n",
+            "[[0 1]\n",
+            " [2 3]\n",
+            " [0 1]\n",
+            " [2 3]\n",
+            " [4 5]\n",
+            " [6 7]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "agThwMTRto4G",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 323
+        },
+        "outputId": "1ecfe442-87b6-4d7e-8f87-e1a6d394f2e2"
+      },
+      "source": [
+        "array1 = np.arange(4).reshape(2,2)\n",
+        "print(array1)\n",
+        "array2 = np.arange(12).reshape(6,2)\n",
+        "print(array2)\n",
+        "print(np.concatenate([array1,array2]))\n",
+        "\n",
+        "array1 = np.arange(2)\n",
+        "array2 = np.arange(3)\n",
+        "print(np.concatenate([array1,array2]))"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[0 1]\n",
+            " [2 3]]\n",
+            "[[ 0  1]\n",
+            " [ 2  3]\n",
+            " [ 4  5]\n",
+            " [ 6  7]\n",
+            " [ 8  9]\n",
+            " [10 11]]\n",
+            "[[ 0  1]\n",
+            " [ 2  3]\n",
+            " [ 0  1]\n",
+            " [ 2  3]\n",
+            " [ 4  5]\n",
+            " [ 6  7]\n",
+            " [ 8  9]\n",
+            " [10 11]]\n",
+            "[0 1 0 1 2]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YYwUaPOCueO4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 161
+        },
+        "outputId": "0ad0b21d-7ed5-40f1-db18-f57135237998"
+      },
+      "source": [
+        "# 배열 나누기 axis = 0:행,1:열\n",
+        "array1 = np.arange(8).reshape(2,4)\n",
+        "print(array1)\n",
+        "left, right = np.split(array1, [1], axis = 1)\n",
+        "print(left)\n",
+        "print(right)\n",
+        "top, bottom = np.split(array1, [1], axis = 0)\n",
+        "print(top)\n",
+        "print(bottom)"
+      ],
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[0 1 2 3]\n",
+            " [4 5 6 7]]\n",
+            "[[0]\n",
+            " [4]]\n",
+            "[[1 2 3]\n",
+            " [5 6 7]]\n",
+            "[[0 1 2 3]]\n",
+            "[[4 5 6 7]]\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
