--- a/Numpy의 기본 연산 [ Python 데이터 분석과 이미지 처리 ].ipynb
+++ b/Numpy의 기본 연산 [ Python 데이터 분석과 이미지 처리 ].ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO1MxVPdfiEQ/WgP/1cKiGt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,49 +28,41 @@
       "metadata": {
         "id": "OxzfcriAv8HK",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 161
-        },
-        "outputId": "d01ab9f7-b896-47ef-f21c-ffc8c2373355"
+        "colab": {}
       },
       "source": [
-        "import numpy as np\n",
-        "\n",
+        "import numpy as np"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wjdE2t-K2xTR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "# 행렬 더하기\n",
         "#array1 = np.random.normal(0,1,(2,3))\n",
         "array1 = np.random.randint(0,10, size=8).reshape(4,2)\n",
         "print(array1)\n",
         "print(array1*2)"
       ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[9 0]\n",
-            " [2 0]\n",
-            " [5 0]\n",
-            " [2 2]]\n",
-            "[[18  0]\n",
-            " [ 4  0]\n",
-            " [10  0]\n",
-            " [ 4  4]]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ZyP8_jfTyTVB",
         "colab_type": "code",
+        "outputId": "c14ab8cd-e946-447f-f308-15fa64f6f91e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 530
-        },
-        "outputId": "6d774730-4fe9-4411-b297-a68a0aa90d04"
+          "height": 251
+        }
       },
       "source": [
         "#size가 다른 행렬들의 덧셈(broadcast)\n",
@@ -94,7 +85,7 @@
         "#print(array6)\n",
         "#print(np.add(array5,array6))"
       ],
-      "execution_count": 17,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,25 +102,51 @@
             " [1]]\n",
             "[[0 1]\n",
             " [3 4]]\n",
-            "=============\n",
+            "=============\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RikdLlUT2iJs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 125
+        },
+        "outputId": "a856c56d-d337-4941-adf5-ccd9eee572fc"
+      },
+      "source": [
+        "array1 = np.arange(9).reshape(3,3)\n",
+        "#print(array1)\n",
+        "array2 = np.arange(9).reshape(3,3)\n",
+        "#print(array2)\n",
+        "#행 붙이기\n",
+        "array3 = np.concatenate([array1,array2],axis = 0)\n",
+        "#print(array3)\n",
+        "#열 붙이기\n",
+        "array4 = np.concatenate([array1,array2],axis = 1)\n",
+        "#print(array4)\n",
+        "#print(array3)\n",
+        "print(array1)\n",
+        "print(np.add(array1,np.arange(3)))"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
             "[[0 1 2]\n",
             " [3 4 5]\n",
             " [6 7 8]]\n",
-            "[[0]\n",
-            " [1]]\n"
+            "[[ 0  2  4]\n",
+            " [ 3  5  7]\n",
+            " [ 6  8 10]]\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-17-744982b32c57>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0marray6\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0marray6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,3) (2,1) "
-          ]
         }
       ]
     }
