Colaboratory를 통해 생성됨

--- a/Numpy의 기본 연산 [ Python 데이터 분석과 이미지 처리 ].ipynb
+++ b/Numpy의 기본 연산 [ Python 데이터 분석과 이미지 처리 ].ipynb
@@ -66,6 +66,7 @@
       },
       "source": [
         "#size가 다른 행렬들의 덧셈(broadcast)\n",
+        "#한개는 행,열 size가 1이어야함. ex) np.arange(3).reshape(1,3) or np.arange(3).reshape(3,1)\n",
         "array1 = np.arange(4).reshape(2,2)\n",
         "print(array1)\n",
         "array2 = np.arange(2).reshape(1,2)\n",
@@ -115,36 +116,124 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 125
+          "height": 179
         },
-        "outputId": "a856c56d-d337-4941-adf5-ccd9eee572fc"
+        "outputId": "dc1d1a63-5264-4553-853c-cd70922e2bd1"
       },
       "source": [
+        "# MASKING (마스킹)\n",
         "array1 = np.arange(9).reshape(3,3)\n",
-        "#print(array1)\n",
-        "array2 = np.arange(9).reshape(3,3)\n",
-        "#print(array2)\n",
-        "#행 붙이기\n",
-        "array3 = np.concatenate([array1,array2],axis = 0)\n",
-        "#print(array3)\n",
-        "#열 붙이기\n",
-        "array4 = np.concatenate([array1,array2],axis = 1)\n",
-        "#print(array4)\n",
-        "#print(array3)\n",
+        "\n",
+        "array2 = array1 < 5\n",
+        "print(array2)\n",
+        "\n",
+        "# 마스킹 배열의 True 값만 handling 할 수 있다.!\n",
+        "# 원소 일일히 if문 쓰지않고 바로 체크할 수 있어서 좋다\n",
+        "array1[array2] = 100\n",
         "print(array1)\n",
-        "print(np.add(array1,np.arange(3)))"
+        "\n",
+        "arrayTF = (array1 % 2 == 1)\n",
+        "array1[arrayTF] = 23\n",
+        "print(array1)"
       ],
-      "execution_count": 18,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[0 1 2]\n",
-            " [3 4 5]\n",
-            " [6 7 8]]\n",
-            "[[ 0  2  4]\n",
-            " [ 3  5  7]\n",
-            " [ 6  8 10]]\n"
+            "[[ True  True  True]\n",
+            " [ True  True False]\n",
+            " [False False False]]\n",
+            "[[100 100 100]\n",
+            " [100 100   5]\n",
+            " [  6   7   8]]\n",
+            "[[100 100 100]\n",
+            " [100 100  23]\n",
+            " [  6  23   8]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pzBIByGu9HYb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 161
+        },
+        "outputId": "eda0a55a-7778-496a-8e50-ccec08a2079e"
+      },
+      "source": [
+        "array1 = np.arange(16).reshape(4,4)\n",
+        "print(array1)\n",
+        "print(\"최대값 : \",np.max(array1))\n",
+        "print(\"최소값 : \",np.min(array1))\n",
+        "print(\"합계값 : \",np.sum(array1))\n",
+        "print(\"평균값 : \",np.mean(array1))"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]\n",
+            " [12 13 14 15]]\n",
+            "최대값 :  15\n",
+            "최소값 :  0\n",
+            "합계값 :  120\n",
+            "평균값 :  7.5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sPrHKmG4BvMR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 233
+        },
+        "outputId": "edaa7dc2-2d4a-4303-ef44-70204c201ab1"
+      },
+      "source": [
+        "array1 = np.arange(16).reshape(4,4)\n",
+        "print(array1)\n",
+        "left, right = np.split(array1, [1], axis=0)\n",
+        "#ex2 = np.split(array1, [1], axis=1)\n",
+        "print(left)\n",
+        "print(right)\n",
+        "print(\"=====================\")\n",
+        "#행을 쪼개서 sum\n",
+        "print(np.sum(array1,axis = 0))\n",
+        "print(\"=====================\")\n",
+        "#열을 쪼개서 sum\n",
+        "print(np.sum(array1,axis = 1))"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]\n",
+            " [12 13 14 15]]\n",
+            "[[0 1 2 3]]\n",
+            "[[ 4  5  6  7]\n",
+            " [ 8  9 10 11]\n",
+            " [12 13 14 15]]\n",
+            "=====================\n",
+            "[24 28 32 36]\n",
+            "=====================\n",
+            "[ 6 22 38 54]\n"
           ],
           "name": "stdout"
         }
