Colaboratory를 통해 생성됨

--- a/Numpy의 활용.ipynb
+++ b/Numpy의 활용.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM0o3erDTtMSrXvBemF4b0U",
+      "authorship_tag": "ABX9TyO3ULiGtUC58lYGaAeykA2u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import numpy as np"
       ],
       "execution_count": 0,
       "outputs": []
