--- a/Numpy의 활용.ipynb
+++ b/Numpy의 활용.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPS5Fk2Ez44AvP9OYOTv2vF",
+      "authorship_tag": "ABX9TyO1ELrsxtcDozMCbe5S/8on",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -199,25 +199,26 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 125
+          "height": 233
         },
-        "outputId": "8e296e87-688a-4182-dfcc-a98f8c923c2b"
+        "outputId": "4a74b115-b5f5-4672-d3e5-7a6abc6525f1"
       },
       "source": [
-        "# 열기준 정렬\n",
-        "array1= np.array([[1,6,12,6],[3,6,21,1]])\n",
-        "# 행 기준 오름차순\n",
-        "#print(np.sort(array1, axis = 0))\n",
+        "# 행열 기준 정렬\n",
         "array2= np.array([[1,6,12,6],[3,6,21,1],[2,1,6,0]])\n",
-        "# 열 기준 오름차순\n",
         "print(np.sort(array2, axis = 1))\n",
-        "print(np.sort(array2))\n",
-        "\n",
-        "array3 = np.array([6,2,6,1,3])\n",
-        "#print(np.sort(array3))\n",
-        "#print(np.sort(array3)[::-1])"
+        "print(np.sort(array2, axis = 1)[::-1])\n",
+        "print(np.sort(array2, axis = 0))\n",
+        "print(np.sort(array2, axis = 0)[::-1])\n",
+        "#axis에 대한 행/렬 헷갈릴때 씀 (순서 : ㅣ-)\n",
+        "#array2= np.array([[1,6,12,6],[3,6,21,1],[2,1,6,0]])\n",
+        "#print(array2)\n",
+        "#left, right = np.split(array2,[1],axis=1)\n",
+        "#print(left)\n",
+        "#print(right)\n",
+        "#print(np.sum(array2,axis=1))\n"
       ],
-      "execution_count": 48,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,9 +226,15 @@
             "[[ 1  6  6 12]\n",
             " [ 1  3  6 21]\n",
             " [ 0  1  2  6]]\n",
-            "[[ 1  6  6 12]\n",
+            "[[ 0  1  2  6]\n",
             " [ 1  3  6 21]\n",
-            " [ 0  1  2  6]]\n"
+            " [ 1  6  6 12]]\n",
+            "[[ 1  1  6  0]\n",
+            " [ 2  6 12  1]\n",
+            " [ 3  6 21  6]]\n",
+            "[[ 3  6 21  6]\n",
+            " [ 2  6 12  1]\n",
+            " [ 1  1  6  0]]\n"
           ],
           "name": "stdout"
         }
@@ -240,34 +247,44 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 197
+          "height": 143
         },
-        "outputId": "89ad4d28-152c-4204-82aa-1383a0851394"
+        "outputId": "6fe764cc-dc23-49d5-e8a6-d43ed71d9dc6"
       },
       "source": [
-        "#axis에 대한 행/렬 헷갈릴때 씀 (순서 : ㅣ-)\n",
-        "array2= np.array([[1,6,12,6],[3,6,21,1],[2,1,6,0]])\n",
+        "# 균일한 간격으로 데이터 생성 (linspace)\n",
+        "array = np.linspace(0,10,5)\n",
+        "print(array)\n",
+        "\n",
+        "# 난수 생성\n",
+        "#np.random.seed(7) # 난수 고정\n",
+        "arrayR = np.random.randint(0,10,(2,3))\n",
+        "print(arrayR)\n",
+        "\n",
+        "# 복사\n",
+        "array1 = np.arange(8)\n",
+        "array2 = array1.copy()\n",
+        "array2[0] = 99\n",
+        "print(array1)\n",
         "print(array2)\n",
-        "left, right = np.split(array2,[1],axis=1)\n",
-        "print(left)\n",
-        "print(right)\n",
-        "print(np.sum(array2,axis=1))\n"
+        "\n",
+        "# 중복된 원소 제거\n",
+        "array = np.array([11,4,51,1,5,2,56,2,11])\n",
+        "print(array)\n",
+        "print(np.unique(array))"
       ],
-      "execution_count": 52,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[ 1  6 12  6]\n",
-            " [ 3  6 21  1]\n",
-            " [ 2  1  6  0]]\n",
-            "[[1]\n",
-            " [3]\n",
-            " [2]]\n",
-            "[[ 6 12  6]\n",
-            " [ 6 21  1]\n",
-            " [ 1  6  0]]\n",
-            "[25 31  9]\n"
+            "[ 0.   2.5  5.   7.5 10. ]\n",
+            "[[3 8 3]\n",
+            " [0 1 0]]\n",
+            "[0 1 2 3 4 5 6 7]\n",
+            "[99  1  2  3  4  5  6  7]\n",
+            "[11  4 51  1  5  2 56  2 11]\n",
+            "[ 1  2  4  5 11 51 56]\n"
           ],
           "name": "stdout"
         }
