Colaboratory를 통해 생성됨

--- a/14. OpenCV Contours 처리.ipynb
+++ b/14. OpenCV Contours 처리.ipynb
@@ -362,13 +362,61 @@
       "metadata": {
         "id": "UfJxNFNO70Uo",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 242
+        },
+        "outputId": "d662f09a-5859-4453-a783-4a9e8ceaf428"
       },
       "source": [
-        ""
+        "import cv2\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "image = cv2.imread('digit_image.png')\n",
+        "image_gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+        "ret, thresh = cv2.threshold(image_gray, 230, 255, 0)\n",
+        "thresh = cv2.bitwise_not(thresh)\n",
+        "\n",
+        "contours, _ = cv2.findContours(thresh, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+        "image = cv2.drawContours(image, contours, -1, (0, 0, 255), 4)\n",
+        "\n",
+        "contour = contours[0]\n",
+        "area = cv2.contourArea(contour)\n",
+        "print(area)\n",
+        "\n",
+        "length = cv2.arcLength(contour, True)\n",
+        "print(length)\n",
+        "\n",
+        "M = cv2.moments(contour)\n",
+        "print(M)\n",
+        "\n",
+        "plt.imshow(cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
+        "plt.show()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "9637.5\n",
+            "1112.1046812534332\n",
+            "{'m00': 9637.5, 'm10': 2328654.1666666665, 'm01': 525860.6666666666, 'm20': 592439950.25, 'm11': 125395340.54166666, 'm02': 32616659.75, 'm30': 157199366984.05002, 'm21': 31597487112.5, 'm12': 7677332730.433333, 'm03': 2223038890.5, 'mu20': 29780523.227014065, 'mu11': -1665373.5978347063, 'mu02': 3923591.96819859, 'mu30': -339915780.7390442, 'mu21': 76375946.41720533, 'mu12': -21905836.49518633, 'mu03': 15169233.760740757, 'nu20': 0.3206295471760697, 'nu11': -0.01793010748946005, 'nu02': 0.04224302932750429, 'nu30': -0.03727866486560947, 'nu21': 0.008376172780476334, 'nu12': -0.0024024196097321344, 'nu03': 0.001663614382378067}\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAACXCAYAAADu8xvIAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4xLjMsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy+AADFEAAAZxklEQVR4nO2de7BdVX3HP7+EECRBQyDGSBhepmaQ\nl+mtUIGMyEOhHWIdc4pjhXboMG21Y6fTqTjOWOtMZ6zTl850ymBLBVqVc7UODBVrEBVQBBMNITxC\nAoImQm4MgQTJg8fqH2efZN999vt99v1+Zu7cs9+/s/ba3/Pbv/Vba5lzDiGEEN1iVtMGCCGEKB+J\nuxBCdBCJuxBCdBCJuxBCdBCJuxBCdBCJuxBCdJBKxN3M3mtmm8xsi5ldW8U1hBBCRGNl57mb2Wzg\nceBiYCvwY+CDzrlHSr2QEEKISKrw3N8BbHHOPemcOwB8FVhVwXWEEEJEcFgF5zwO+IVveStwdnAn\nM7sGuAZg3rx5v7l8+fIKTBFCiO6ybt26XznnFoVtq0LcU+Gcux64HmBiYsKtXbu2KVOEEGIsMbOn\no7ZVEZbZBhzvW17qrRNCCFETVYj7j4FlZnaSmR0OXAHcVsF1hBBCRFB6WMY594qZfRT4P2A2cINz\n7uGyryOEECKaSmLuzrlvAt+s4tyFMct3nIZGFlUxrJOqY6JEGmtQrZ28oh48Xg+gKItgnTRT/RKl\nMTOGHygq7FWdS8xcouqR6pcoie577lU8LGV78U090PIShegs3RX3KMHs9/Odr9eLvkZekWzaS1Oo\nqX5C7vmkG9TJ1dabvo/uiyhAN8U9TDTzinrw+DCRH3cU662HQL0ciroQVdC9mHsVwp50rjweeNNe\nu6iXpoTdLNuf6Azd8tyDlTNO1LN44MHz+Jd75bxKT/br9ZxX9/Qg10YKYT8YkhmSpx6VIc7Bc+iN\nbmzpjudelbDn2V+IIXUJe1XIox9buiPuaej18gt11HFlhnxEt6gzFFO1AEvgx45uhGWyeO1F6PWS\nz52zcbLsMEndYR6Rj8Jee5LoZn0W4pwfNbyPFaXPxJSHwkP++it4WGUOq7BZvneaH4/gNdKcv2Jv\nKE7gR35MWlAPGiHNPSgh/h302iuJsVfh1ESJ/UytLy3DzNY55ybCtnU/LFNU2MP2LysGX/EDokbT\nCLJmh+TZ30diOKbNQtnvK/Q4pox/WCar91vVg9TvTxf9tK+wzlXmwSs0E6DMbJKoe5unAbWIHUPK\nSCCIO0fe+i0aY/zFPY48oZIohscOH6rhueMeiCgxCdpR4zAGhcMxRQSyKTGoawiKOjJj0op6nrdL\n/zFpvPU2NbLqh2aEbot7DexnP5vZzG5281L/Gi7qXZ98UBXdy4PCUqbXXtZD3ES3+gTb05RTbHgr\ngwfb6pTHIGHJA0HvvU3oTWKE8Rb3urJkYrityCRTZVXIlMKey2uvyuut6octxpMekvWHz79/qNDH\njBdz8LgqhL1Mrz3qPOMUb5fAT6P7DaplkbJBbbK/Ovt5i5DXY096CKruvFL224B/OUbUi77RpDlH\no2PGRCUQpPlLwziJ/QxnvD33OMqMt4d5ZjEiPnnrH8Dll0duH/Hi8oYrqvDYy86b9hO8J1EedxqS\n7PRtLxJ6iTp2uN5/XOO9T4vW+bC3nrC2Je/zZEY/piqmlbG894N0V9zLIkzY990Mt8WEY159NfaU\nI0O8+q+VtmLWKexleWsNjKyZJOxJ6aLD7VHnuan/Elf2jsxnXFayvO3UIXD79sERR1R/HZELhWXi\niIqlzpkTf9wrr6Q6fejre5oHeByFPemcWYQrJCtl+DdtfUInriz9AKL2Xc96ev0+vX6fJ58MHDNO\nDah52LWrnLROUQny3KOIS2t7+eX4Y2fNGqn0UXHYSdcv5MFXlsueVtTjvPAsedNQyiv1F3f1ufNO\nuGV1tF15O3et7tlIeW9l68HP69fDokVw1FERJwj7AWur4Af7X4Q0rq5+88cG/2sSeI1/nw2Jex6e\nfz5y0+reZPh63wMw4mGGCXwUdeSyl5WFEdw/aujkkjrHbN0K993nnbLfJxgSjhX1lJ2S/GGaDWyY\ntu3VV+Fb34KVK+GjbypwP9sq+H4aSIkcPiMS+XR0NywTFJKCr/3T2LFj2uKxHMvpnM55nJfq9Lk9\nnSpz2eMoMppmGkoK/WzaFL0tUtiTMkUitq/uGY/zeOghjz1WUIDyZCq1Nf+8AvzPT+dDXwXorrhX\nybPPAmAYp3AKF3ABy1nOEpakPkVi2CYsxc+/f5m57EGGYl62qFcsQM89l2HnLOl/w/0D3NILTxeZ\nmop9uUtPm3qAtgh57ukY77BMUlywoh51s3a9wAVcyEIWTt+QlIoWfMW3XrqKmlfYs5BljJsiaYtp\nh23IeI243UsbATNDGf3wh7AgowiFvtENy6IFHfZiqcpjrnNM/I4hzz1IUmWamuIUThkV9jQkPACh\n3nuGUEzotiyv+EkPaFZvt+hxGXjhhUpPn5lf/zr7MWEZP0BzHnzcPSsS9sxJLb1+O8TMEveiFXDP\nHrjvPk7ghPznCFTALPH3QjH2IgJfhTgnNbZmvFdRIZlSx60P2PThW6vxIiNFXogMjHdYBpJflcOG\nKh0el4U9e+Dee+HAAeYzP7udNTHZd9HhmSzDEI8Zu3bVf81FiwYZOnEk/XjHiXimLKou0rZOW2PG\n+It7GqJS7tLw7LOD9Adfhsxe9jKHQEemMoc7KEjsQFdNjMw4JEXudF6mpkbXVem1T7o+v7EzXtzT\nCHNciuxw3ch52hZvL5u6xsTvON0Ly5TdgHrPPSOpj9vZXu41UpKnwTRyoKuOZWIcOFD/NQ8/PHpb\nP0c9jBKsaeJW1hSPbaWOMfFnCIXE3cyeMrOHzGy9ma311i00szVmttn7f3Q5psaQdhq8jB5P1OBg\nT/Ikr/FapnMdJKbypqm0w27zYX9xdF3gU474kI+IexYl7nmEfUiSwE8R8ooyg5Cwp6cMz/0C59xZ\nvklarwW+45xbBnzHW66eLALv/4vg9v6Vkdt2s5uv83Ue5dHwaxWYgm2EDJU3SexDvfg2C7x/7tKE\neUxTfY2o85U0vPFc5nIBF4xuyDjUbpzAf5/vs5vdhW1tJQnPh4Q9G1XE3FcB7/I+3wh8D/h4BdcZ\nJU9MN2L7yTzCwzwce+hGNrKLXbwzaEMYCeIRW3FLnmd1pNG1rmFSK8zVnj07cTDOZDKWw/7905fP\n5VyO4Zjs1w1O4Uh8H4ineIozOCP7ddqM8tlLp6jn7oBvm9k6M7vGW7fYOfeM9/lZYHHYgWZ2jZmt\nNbO1OwIx7VLJ2ctyGcuYy9zE/baxLX6HCK8wc+XNkY5YqFNTjTgcd3M3t/Y/lPnYuBBJL8+PR1LP\nYN9927t3+q65hN1PyjTZX/LLYtdpG4qzV0JRcT/PObcCuBT4iJmt9G90zjkGPwAjOOeud85NOOcm\nFi1aVNCMaScOX59R4Ocwh9M4Lfv1zcI/+yjklWScSaftAr+f/dzJnWxnOwc4kH0mK48jI4ZUzyXw\nKfH7JEdTfdPSkD3s4dfk6CU1BkjYy6NQWMY5t837P2Vm3wDeAWw3syXOuWfMbAk00AIU8poLZBb4\nk4Hj+jezhjXsZW/kfpM7r2P1MX9yaEVGUS+t8kYMdxA24UTtoZmIkMxd3MWLvHho/ZFH5vrxe/Ob\nw9MhYSDwl14K8xO6Jxy8DynSRXfvhke9JpcjOZKLuCijxRGkDME9wRPdCM0UCVeKWHJ77mY2z8yO\nGn4GLgE2ArcBV3m7XQXcWtTI3JRQEeb2PsxKVsbvtHBhoiBVLuw5qK1xNSbW/hIvTd924om5LrEw\nYTSIRx7JddpINm489HlxeOSxFKJCM9N+EMeVrHF2CXsmioRlFgP3mtmDwAPA/zrnvgV8FrjYzDYD\nF3nLzVFC1/nX9/54tNPSEP9cnRGdUBoT9mAMt4kQTUIjquHbPmcOnHJKrsscnRAV+fnPy+vFOjUF\n23xNLW/kjQc/l9pxKoaRH8VxQx2VKid3WMY59yRwZsj6ncCFRYyqhLCHLK2n2u/zPmAf+/gBP+A5\nvIFM5s+HSy6ZtmuakEJopa3KKwm85gdnE6osPBNWtiHx7+Us59Tep31rvpz6Ev6ynpXgpjgHd945\n+BE477zpU39muR933AEvBpzmYzk2rcmlMdaeuxpQa6F7PVSzkKZR0idIR3DE9DzmFSsGOXgZqFXY\nmyAqZzyiYXO6sGcjWJbz5iUfs2sXrFmT8gIh3yMo7ECqrKqyeYUqe201i4S9HGa2uAdJkYc9i1lM\nMAEnnACLs8VaGxP2psMzZU3bl8Bb35puv337BtPx7doV8+qfo/2hrpBMl5Gwl8fMGDgsDSk72LzG\na/xk7sNw5sWZL1F0MuxWEyWGFQu7v7PPSSfBli2DTBaA1SOzqPrYCqvfmU3Ao9IqD3CA1/G6TOcq\nymyyvTG2BnVWqg2Je0oe4zE2shGHg8ujRSNp+rzh8rT9mhypsShliHqRmZ18zJoF73kPPPTQYCDP\nJIZtD0lvMlf372APeyK372Z37eLe5mGnI9HwArUicYdEr/1lXuYhHhosLFgQeoqo1/uoGds74cVn\niK0D5Qh7Ct72NvjMGV65F5jgZHjsPO6JFfed7Kw0HTKMeaRoYBAzGol7grDvZS93c/dgYfZsOPvs\nkVOkHbe7UwKfNSZdk7AD/P7sQ9cK68AVJOkHIElId7Kzsnh7VNiiFs+9zH4P8tprZ2aLe4yw72Mf\nd3HXoW7ey5bBWWdN2z1S1CN6yIZ58ZFhmjIrd4Z5WLOeC8gXV6/o4Y18g/KJb9bvv4xlPMETkdu/\n0At0cqtBmN7CWw4thM021mJxlLDXg7JlhgQE6l7unT5+x5nTU/oThT34OeHY0Mmx20bWMEwYNUyW\nnUSa8e/9HMVRHEnE4DVlk+K+v4E31GdP3UjYS2Pmeu4JD9EufN0Z580bGY51hKhKGePF15IpkOC1\npw4nlOGxt+zBTSvwk33HUpbyOI9XbFE6juO4pk0QY8DM9NwT4uzP8/yhhcMOg3PPjT9fSZNOt9Z7\nH2dhL+FNYXXPOIETSjIohpRpgrXYkkSWqf1i6rGGGKiOmeW5p8hl38EOvsf3Bgtvfzu85VBss3Bs\nMODFR8XgS4m/h40hn8drTzvBRo0Nprnw25LjR3MBCzif87mHe0a2fWpDn9NPDxlVMnjdMFKO9T+9\n7k12f5JsUZiZ6bnH8DRPDz4sW1ausMccW6r3EjU5SJ5G1CLC3mZyevNv4k0j6+bPh1NPjTmohKn9\nQutH1WVe1qxZBecMFvmZOeKeorK+yqtsZetg4cyRMdFqI1MsPoVYhAl7otde1GMfhwc15aQn/vIL\n9gz1Dy9URhtK7nPIkxcBZkZYJo1Q9Xps7n+Gl+cdDhdeGu9VVSBck5PTl6f1gc0Ze8+d8phX2MdB\n0JNIaIB+P+/nfu7nH3rnDLZH9ECG9G9kcYLe1Zi0vPbq6b7nnuH1cnnvU3D++TB3+ih/pT9gAZvC\nxiwpOj1cnLCX0uGmi8KekqGwQ3zdSOOFVybsRRrjk56ZtPde48g0yszw3JPwVdbVr7+6NZWw1+/T\nzxhbTfLWSxkRsqvCnqKzV1j5xaW15q1Lkem2bcmgEq2n+557EiHi2aZX4T/s3x67fbLvpv3FESrs\neWPtUcePKwV78ZZZZ3IPDR28Vxkbbg8eE3dOMTZ033MPejtjltmxl72FhguI9NTHORQTnF0qTW/h\nOFIKe2g4K4UdqadZDCPuO/R6o+I7XA7eqzwef0TbVGr7IlC8vR66L+5tJCAK/V4vMsY+q8DLVeYQ\nzDh5bUkhipIFI7KdIkWoJLdXH/YdwpyVKu5Tm++9SMXMEPc2xipT2nRYxluUKOh5Ra8tXnvQhrAy\nzGJbnjh78PxV1K+i5RscTCzrsWEU6JXalnasmcTMEHdIFoKGxT/Ke7+5t6q8i7RBkMsmeF/rFvYo\nO4qQ9B3Seu/+dWmFXh57Z5g54g65xS103PWSmXT9g7ntzkFvVknXyxl3jhWGtv1IFByeIVOMPY8d\nUaJftJdzlvBMEdFu+/0XocwscS+LMsbLjvHySnuJ0EMYTt1vaXXdh6EIl+l9S9jHFol7SkIH9IJS\n5v8sNR6phy+eIpkxbSMqFOQX5KxC38AEK6IaJO5DQtLaMk1unYPUKXJte6iq9nyr+r55hL1tZR8k\nqc2orNTftpeDGEGdmPxUOVpjSlop7F1oZMvrsY8LVdaTNtRBkRmJew4aHf2vKeoU+IYyl8YiFBNH\nFaNxjlsZiINI3IOk9N4nXT+XQMcd10qv3U+HBX7shd1PzPDFmY4d5zIQirmHEtGtPEyUy/DAc48l\n0gRVCnxDQ0N0StiDdOm7iExI3KMIyUSIE/k8FB4TReRmbGPrQqQkMSxjZjeY2ZSZbfStW2hma8xs\ns/f/aG+9mdkXzGyLmW0wsxVVGl85ESK72nqFG1sl7C1F5S86grmEymxmK4EXgZucc6d56z4HPOec\n+6yZXQsc7Zz7uJldBvw5cBlwNvB559zZSUZMTEy4tWvXFvwqFTOu6X9ZaNP4OzWlQ1Z+vZlM2vqk\nss+Nma1zzk2EbUv03J1zdwPPBVavAm70Pt8IvM+3/iY34EfAAjNbks/sljETUs1mgh1RIy2K8klT\nrir7ysibLbPYOfeM9/lZYLH3+TjgF779tnrrRjCza8xsrZmt3bFjR04zaqbsDII2ZiS0zZ4qUEZI\nfcSVr8q+UgqnQrpBXCfzXXLOXe+cm3DOTSxatKioGfVShii0uWI3OQlHm8tF5CNsiGTd58rJmy2z\n3cyWOOee8cIuU976bcDxvv2Weuu6SZcraJe/m6gf1afayeu53wZc5X2+CrjVt/5KL2vmHOAFX/hG\nCCFETSR67mb2FeBdwLFmthX4G+CzQN/MrgaeBoZ5fd9kkCmzBXgJ+KMKbBZCCJFAorg75z4YsenC\nkH0d8JGiRgkhhCiGxpYRQogOInEXQogOInEXQogOInEXQogOInEXQogOInEXQogOInEXQogOInEX\nQogOInEXQogOInEXQogOInEXQogOInEXQogOInEXQogOInEXQogOInEXQogOInEXQogOInEXQogO\nInEXQogOInEXQogOInEXQogOInEXQogOInEXQogOInEXQogOInEXQogOInEXQogOInEXQogOInEX\nQogOInEXQogOInEXQogOInEXQogOInEXQogOInEXQogOInEXQogOYs65pm3AzPYAm5q2I4JjgV81\nbUQEsi0fsi0fsi0fVdp2gnNuUdiGwyq6YFY2OecmmjYiDDNbK9uyI9vyIdvyIdtGUVhGCCE6iMRd\nCCE6SFvE/fqmDYhBtuVDtuVDtuVDtgVoRYOqEEKIcmmL5y6EEKJEJO5CCNFBGhd3M3uvmW0ysy1m\ndm0L7HnKzB4ys/VmttZbt9DM1pjZZu//0TXZcoOZTZnZRt+6UFtswBe8ctxgZisasO3TZrbNK7v1\nZnaZb9snPNs2mdl7KrTreDP7rpk9YmYPm9nHvPWNl1uMbW0otyPM7AEze9Cz7W+99SeZ2f2eDbeY\n2eHe+rne8hZv+4kN2PYlM/uZr9zO8tbX+ix415xtZj81s9u95cbLDedcY3/AbOAJ4GTgcOBB4NSG\nbXoKODaw7nPAtd7na4G/r8mWlcAKYGOSLcBlwB2AAecA9zdg26eBvwrZ91Tv3s4FTvLu+eyK7FoC\nrPA+HwU87l2/8XKLsa0N5WbAfO/zHOB+rzz6wBXe+uuAP/U+/xlwnff5CuCWCsstyrYvAR8I2b/W\nZ8G75l8CXwZu95YbL7emPfd3AFucc0865w4AXwVWNWxTGKuAG73PNwLvq+Oizrm7gedS2rIKuMkN\n+BGwwMyW1GxbFKuArzrn9jvnfgZsYXDvq7DrGefcT7zPe4BHgeNoQbnF2BZFneXmnHMveotzvD8H\nvBv4mrc+WG7D8vwacKGZWc22RVHrs2BmS4HfAf7dWzZaUG5Ni/txwC98y1uJr+x14IBvm9k6M7vG\nW7fYOfeM9/lZYHEzpsXa0pay/Kj3KnyDL3zViG3eK+/bGXh6rSq3gG3QgnLzQgvrgSlgDYM3heed\nc6+EXP+gbd72F4Bj6rLNOTcst7/zyu2fzWxu0LYQu6vgX4C/Bl7zlo+hBeXWtLi3kfOccyuAS4GP\nmNlK/0Y3eJ9qRf5om2zx+DfgFOAs4BngH5syxMzmA18H/sI5t9u/relyC7GtFeXmnHvVOXcWsJTB\nG8LyJuwII2ibmZ0GfIKBjb8FLAQ+XrddZva7wJRzbl3d106iaXHfBhzvW17qrWsM59w27/8U8A0G\nlXz78LXO+z/VnIWRtjRels657d5D+BrwRQ6FEGq1zczmMBDP/3bO/Y+3uhXlFmZbW8ptiHPueeC7\nwG8zCGkMx6DyX/+gbd72NwA7a7TtvV6Yyznn9gP/STPldi5wuZk9xSCs/G7g87Sg3JoW9x8Dy7yW\n5cMZNDDc1pQxZjbPzI4afgYuATZ6Nl3l7XYVcGszFkKMLbcBV3qZAucAL/jCELUQiGv+HoOyG9p2\nhZcpcBKwDHigIhsM+A/gUefcP/k2NV5uUba1pNwWmdkC7/PrgIsZtAl8F/iAt1uw3Ibl+QHgLu+N\nqC7bHvP9WBuDmLa/3Gq5p865TzjnljrnTmSgX3c55z5EC8qt0hbkNH8MWrYfZxDf+2TDtpzMIDvh\nQeDhoT0MYmLfATYDdwILa7LnKwxe019mELe7OsoWBpkB/+qV40PARAO23exdewODSrzEt/8nPds2\nAZdWaNd5DEIuG4D13t9lbSi3GNvaUG5nAD/1bNgIfMr3TDzAoDF3EpjrrT/CW97ibT+5Advu8spt\nI/BfHMqoqfVZ8Nn5Lg5lyzRebhp+QAghOkjTYRkhhBAVIHEXQogOInEXQogOInEXQogOInEXQogO\nInEXQogOInEXQogO8v8zD7HE40lj+wAAAABJRU5ErkJggg==\n",
+            "text/plain": [
+              "<Figure size 432x288 with 1 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     }
   ]
 }
