Colaboratory를 통해 생성됨

--- a/16.KNN Algorithm.ipynb
+++ b/16.KNN Algorithm.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNfOin4lgqEZLBgkSs5Qree",
+      "authorship_tag": "ABX9TyM4lhG+j94jTFZmfediSSuW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,6 +79,7 @@
         "ret, results, neighbours, dist = knn.findNearest(newcomer, 3)\n",
         "\n",
         "# 가까운 3개를 찾고, 거리를 고려하여 자신을 정합니다.\n",
+        "# ravel(0,1)로 표현해준다\n",
         "print(\"result : \", results)\n",
         "print(\"neighbours :\", neighbours)\n",
         "print(\"distance: \", dist)\n",
