--- a/17. KNN 숫자 인식 예제.ipynb
+++ b/17. KNN 숫자 인식 예제.ipynb
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "ay-RTTmKyzWm",
         "colab_type": "code",
-        "outputId": "b2f4be8e-2d3d-47c3-813f-dd681f5e1b40",
+        "outputId": "c9b504ec-6a93-4e95-ef53-8703cf20133a",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -68,15 +68,15 @@
         "\n",
         "uploads = files.upload()"
       ],
-      "execution_count": 2,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-12afa9f5-1dff-4911-8350-00db62022a28\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-12afa9f5-1dff-4911-8350-00db62022a28\">\n",
+              "     <input type=\"file\" id=\"files-edaf4be2-a57f-405c-b4d7-87290dbfc13e\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-edaf4be2-a57f-405c-b4d7-87290dbfc13e\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -93,7 +93,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving digits.png to digits.png\n"
+            "Saving digits.png to digits (1).png\n"
           ],
           "name": "stdout"
         }
@@ -104,7 +104,7 @@
       "metadata": {
         "id": "l2mVj7OI00Lp",
         "colab_type": "code",
-        "outputId": "8781c070-5c71-4a94-e6e6-dd8a22bc814a",
+        "outputId": "27e2eba3-a840-4079-8a73-c40f8c8e899d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -123,6 +123,7 @@
         "\n",
         "# 각 (20 X 20) 크기의 사진을 한 줄(1 X 400)으로 바꿉니다.\n",
         "# reshape에 -1은 알아서 맞게 지정하라는 뜻\n",
+        "# ML 에서는 이미지를 처리할때 한줄로(벡터형태) 처리한다.\n",
         "train = x[:,:].reshape(-1,400).astype(np.float32)\n",
         "#print(np.shape(train))\n",
         "\n",
@@ -134,7 +135,7 @@
         "#plt.imshow(cv2.cvtColor(img,cv2.COLOR_BGR2RGB))\n",
         "#plt.show()"
       ],
-      "execution_count": 20,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,11 +151,11 @@
       "metadata": {
         "id": "n5zAjk3h0-a4",
         "colab_type": "code",
+        "outputId": "3125dcb8-ab65-4aad-b06f-c65d40fdab34",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "e2a149c1-5e47-4e76-8b45-ecda03c2dd54"
+        }
       },
       "source": [
         "# 다음과 같이 하나씩 글자를 출력할 수 있습니다.\n",
@@ -207,7 +208,7 @@
         "plt.imshow(cv2.cvtColor(img_40,cv2.COLOR_BGR2RGB))\n",
         "plt.show()"
       ],
-      "execution_count": 19,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "display_data",
@@ -322,11 +323,11 @@
       "metadata": {
         "id": "9fiDEXa8rO4g",
         "colab_type": "code",
+        "outputId": "71325103-b48b-46f8-ddac-2cc9d67a1386",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "9391eede-b447-4760-b562-566401ef1ed9"
+        }
       },
       "source": [
         "import glob\n",
@@ -355,6 +356,9 @@
         "  knn.train(train, cv2.ml.ROW_SAMPLE, train_labels)\n",
         "  # 가장 가까운 5개의 글자를 찾아, 어떤 숫자에 해당하는지 찾습니다.\n",
         "  ret, result, neighbours, dist = knn.findNearest(test, k=5)\n",
+        "  print(\"result : \", result)\n",
+        "  print(\"neighbours :\", neighbours)\n",
+        "  print(\"distance: \", dist)\n",
         "  return result\n",
         "\n",
         "train, train_labels = load_train_data(FILE_NAME)\n",
@@ -364,7 +368,7 @@
         "  result = check(test, train, train_labels)\n",
         "  print(result)"
       ],
-      "execution_count": 22,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "display_data",
@@ -381,6 +385,9 @@
         {
           "output_type": "stream",
           "text": [
+            "result :  [[4.]]\n",
+            "neighbours : [[4. 4. 4. 4. 4.]]\n",
+            "distance:  [[      0.  883096. 1212061. 1276910. 1333524.]]\n",
             "[[4.]]\n"
           ],
           "name": "stdout"
@@ -400,6 +407,9 @@
         {
           "output_type": "stream",
           "text": [
+            "result :  [[6.]]\n",
+            "neighbours : [[6. 6. 6. 6. 6.]]\n",
+            "distance:  [[     0. 479564. 486503. 492083. 564347.]]\n",
             "[[6.]]\n"
           ],
           "name": "stdout"
@@ -419,6 +429,9 @@
         {
           "output_type": "stream",
           "text": [
+            "result :  [[1.]]\n",
+            "neighbours : [[1. 1. 1. 1. 1.]]\n",
+            "distance:  [[     0.  40809. 105483. 113888. 135471.]]\n",
             "[[1.]]\n"
           ],
           "name": "stdout"
@@ -438,6 +451,9 @@
         {
           "output_type": "stream",
           "text": [
+            "result :  [[5.]]\n",
+            "neighbours : [[5. 5. 3. 5. 5.]]\n",
+            "distance:  [[      0. 1065848. 1186362. 1195373. 1211063.]]\n",
             "[[5.]]\n"
           ],
           "name": "stdout"
@@ -457,6 +473,9 @@
         {
           "output_type": "stream",
           "text": [
+            "result :  [[0.]]\n",
+            "neighbours : [[0. 0. 0. 0. 0.]]\n",
+            "distance:  [[     0. 335317. 405813. 431104. 502140.]]\n",
             "[[0.]]\n"
           ],
           "name": "stdout"
@@ -476,6 +495,9 @@
         {
           "output_type": "stream",
           "text": [
+            "result :  [[3.]]\n",
+            "neighbours : [[3. 3. 3. 3. 3.]]\n",
+            "distance:  [[     0. 678956. 725717. 730526. 735237.]]\n",
             "[[3.]]\n"
           ],
           "name": "stdout"
@@ -495,6 +517,9 @@
         {
           "output_type": "stream",
           "text": [
+            "result :  [[8.]]\n",
+            "neighbours : [[8. 8. 8. 8. 8.]]\n",
+            "distance:  [[     0. 506315. 578447. 666351. 692336.]]\n",
             "[[8.]]\n"
           ],
           "name": "stdout"
@@ -514,6 +539,9 @@
         {
           "output_type": "stream",
           "text": [
+            "result :  [[7.]]\n",
+            "neighbours : [[7. 7. 7. 7. 7.]]\n",
+            "distance:  [[     0. 358389. 368562. 419405. 458292.]]\n",
             "[[7.]]\n"
           ],
           "name": "stdout"
@@ -533,6 +561,9 @@
         {
           "output_type": "stream",
           "text": [
+            "result :  [[2.]]\n",
+            "neighbours : [[2. 2. 2. 2. 5.]]\n",
+            "distance:  [[      0.  958003. 1021051. 1105635. 1120527.]]\n",
             "[[2.]]\n"
           ],
           "name": "stdout"
